# PETase

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-embeddings.txt  requirements.txt
.github/workflows/: ci.yml
configs/: surrogate_config.yaml
notebooks/: 00_data_exploration.ipynb  01_model_training.ipynb  02_acquisition_rounds.ipynb
results/final_summary/: README.md
scripts/: generate_candidates_fasta.py
src/: petase_models.py  petase_pipeline.py  petase_scoring.py  test_example.py
src/acquisition/: __init__.py  acquisition.py  batch_design.py  proposer.py  qd_archive.py  ram_dummy.py  ram_esm.py  retrieval.py
src/models/: __init__.py  surrogate.py  utils.py
src/pipeline/: run_round.py
src/scoring/: constraints.py
src/utils/: esm_embed.py  io.py
tests/: test_acquisition.py  test_data_module.py  test_ram_esm.py  test_retrieval.py  test_utils_io.py
